--- a/src/output.css
+++ b/src/output.css
@@ -807,12 +807,16 @@ video {
   clear: none;
 }
 
-.m-1 {
-  margin: 0.25rem;
-}
-
 .m-2 {
   margin: 0.5rem;
+}
+
+.m-auto {
+  margin: auto;
+}
+
+.m-4 {
+  margin: 1rem;
 }
 
 .mx-4 {
@@ -841,6 +845,10 @@ video {
   margin-bottom: 0.5rem;
 }
 
+.mb-3 {
+  margin-bottom: 0.75rem;
+}
+
 .mb-4 {
   margin-bottom: 1rem;
 }
@@ -851,6 +859,14 @@ video {
 
 .mb-8 {
   margin-bottom: 2rem;
+}
+
+.mr-32 {
+  margin-right: 8rem;
+}
+
+.mt-1 {
+  margin-top: 0.25rem;
 }
 
 .mt-16 {
@@ -869,12 +885,16 @@ video {
   margin-top: 1rem;
 }
 
-.mb-3 {
-  margin-bottom: 0.75rem;
+.me-2 {
+  margin-inline-end: 0.5rem;
 }
 
-.mt-1 {
-  margin-top: 0.25rem;
+.mt-8 {
+  margin-top: 2rem;
+}
+
+.mt-12 {
+  margin-top: 3rem;
 }
 
 .box-border {
@@ -1040,6 +1060,10 @@ video {
   height: 20px;
 }
 
+.h-\[21px\] {
+  height: 21px;
+}
+
 .h-\[25\%\] {
   height: 25%;
 }
@@ -1108,6 +1132,10 @@ video {
   height: 90%;
 }
 
+.h-\[\] {
+  height: ;
+}
+
 .h-fit {
   height: -moz-fit-content;
   height: fit-content;
@@ -1115,22 +1143,6 @@ video {
 
 .h-full {
   height: 100%;
-}
-
-.h-\[23px\] {
-  height: 23px;
-}
-
-.h-\[21px\] {
-  height: 21px;
-}
-
-.h-20 {
-  height: 5rem;
-}
-
-.h-\[\] {
-  height: ;
 }
 
 .max-h-\[10rem\] {
@@ -1182,16 +1194,20 @@ video {
   width: 50%;
 }
 
-.w-20 {
-  width: 5rem;
-}
-
 .w-28 {
   width: 7rem;
 }
 
+.w-4\/5 {
+  width: 80%;
+}
+
 .w-48 {
   width: 12rem;
+}
+
+.w-5\/6 {
+  width: 83.333333%;
 }
 
 .w-8 {
@@ -1242,6 +1258,10 @@ video {
   width: 38%;
 }
 
+.w-\[420px\] {
+  width: 420px;
+}
+
 .w-\[45\%\] {
   width: 45%;
 }
@@ -1264,6 +1284,10 @@ video {
 
 .w-\[6rem\] {
   width: 6rem;
+}
+
+.w-\[70px\] {
+  width: 70px;
 }
 
 .w-\[80\%\] {
@@ -1301,18 +1325,6 @@ video {
 
 .w-full {
   width: 100%;
-}
-
-.w-\[\] {
-  width: ;
-}
-
-.w-\[70px\] {
-  width: 70px;
-}
-
-.w-\[420px\] {
-  width: 420px;
 }
 
 .min-w-\[26\%\] {
@@ -1581,6 +1593,10 @@ video {
 
 .list-outside {
   list-style-position: outside;
+}
+
+.list-disc {
+  list-style-type: disc;
 }
 
 .appearance-none {
@@ -2282,6 +2298,10 @@ video {
   border-radius: 0.75rem;
 }
 
+.rounded-sm {
+  border-radius: 0.125rem;
+}
+
 .rounded-b {
   border-bottom-right-radius: 0.25rem;
   border-bottom-left-radius: 0.25rem;
@@ -2290,6 +2310,11 @@ video {
 .rounded-e {
   border-start-end-radius: 0.25rem;
   border-end-end-radius: 0.25rem;
+}
+
+.rounded-e-\[120px\] {
+  border-start-end-radius: 120px;
+  border-end-end-radius: 120px;
 }
 
 .rounded-l {
@@ -2432,6 +2457,26 @@ video {
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
 }
 
+.border-green-400 {
+  --tw-border-opacity: 1;
+  border-color: rgb(74 222 128 / var(--tw-border-opacity));
+}
+
+.border-green-500 {
+  --tw-border-opacity: 1;
+  border-color: rgb(34 197 94 / var(--tw-border-opacity));
+}
+
+.border-purple-500 {
+  --tw-border-opacity: 1;
+  border-color: rgb(168 85 247 / var(--tw-border-opacity));
+}
+
+.border-blue-500 {
+  --tw-border-opacity: 1;
+  border-color: rgb(59 130 246 / var(--tw-border-opacity));
+}
+
 .bg-\[\#37517e\] {
   --tw-bg-opacity: 1;
   background-color: rgb(55 81 126 / var(--tw-bg-opacity));
@@ -2462,6 +2507,11 @@ video {
   background-color: rgb(107 114 128 / var(--tw-bg-opacity));
 }
 
+.bg-green-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(220 252 231 / var(--tw-bg-opacity));
+}
+
 .bg-green-200 {
   --tw-bg-opacity: 1;
   background-color: rgb(187 247 208 / var(--tw-bg-opacity));
@@ -2480,6 +2530,16 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-purple-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(243 232 255 / var(--tw-bg-opacity));
+}
+
+.bg-blue-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(219 234 254 / var(--tw-bg-opacity));
 }
 
 .bg-opacity-40 {
@@ -2743,6 +2803,10 @@ video {
   padding-left: 0.25rem;
 }
 
+.pl-16 {
+  padding-left: 4rem;
+}
+
 .pl-2 {
   padding-left: 0.5rem;
 }
@@ -2779,24 +2843,20 @@ video {
   padding-top: 0px;
 }
 
+.pt-1 {
+  padding-top: 0.25rem;
+}
+
+.pt-32 {
+  padding-top: 8rem;
+}
+
 .pt-5 {
   padding-top: 1.25rem;
 }
 
-.pr-10 {
-  padding-right: 2.5rem;
-}
-
-.pl-10 {
-  padding-left: 2.5rem;
-}
-
-.pl-20 {
-  padding-left: 5rem;
-}
-
-.pl-16 {
-  padding-left: 4rem;
+.pr-2 {
+  padding-right: 0.5rem;
 }
 
 .text-left {
@@ -2938,12 +2998,16 @@ video {
   font-weight: 300;
 }
 
+.font-medium {
+  font-weight: 500;
+}
+
 .font-semibold {
   font-weight: 600;
 }
 
-.font-medium {
-  font-weight: 500;
+.font-thin {
+  font-weight: 100;
 }
 
 .uppercase {
@@ -3044,6 +3108,11 @@ video {
   color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
+.text-blue-400 {
+  --tw-text-opacity: 1;
+  color: rgb(96 165 250 / var(--tw-text-opacity));
+}
+
 .text-blue-500 {
   --tw-text-opacity: 1;
   color: rgb(59 130 246 / var(--tw-text-opacity));
@@ -3064,13 +3133,13 @@ video {
   color: rgb(31 41 55 / var(--tw-text-opacity));
 }
 
-.text-inherit {
-  color: inherit;
+.text-green-400 {
+  --tw-text-opacity: 1;
+  color: rgb(74 222 128 / var(--tw-text-opacity));
 }
 
-.text-red-300 {
-  --tw-text-opacity: 1;
-  color: rgb(252 165 165 / var(--tw-text-opacity));
+.text-inherit {
+  color: inherit;
 }
 
 .text-red-500 {
@@ -3083,14 +3152,14 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.text-blue-700 {
+.text-purple-400 {
   --tw-text-opacity: 1;
-  color: rgb(29 78 216 / var(--tw-text-opacity));
+  color: rgb(192 132 252 / var(--tw-text-opacity));
 }
 
-.text-blue-400 {
+.text-blue-600 {
   --tw-text-opacity: 1;
-  color: rgb(96 165 250 / var(--tw-text-opacity));
+  color: rgb(37 99 235 / var(--tw-text-opacity));
 }
 
 .underline {
@@ -3673,13 +3742,119 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
+@media (max-width: 700px) {
+  .max-\[700px\]\:w-1\/5 {
+    width: 20%;
+  }
+}
+
+@media (min-width: 300px) {
+  .min-\[300px\]\:w-5\/6 {
+    width: 83.333333%;
+  }
+}
+
+@media (min-width: 400px) {
+  .min-\[400px\]\:w-5\/6 {
+    width: 83.333333%;
+  }
+}
+
+@media (min-width: 500px) {
+  .min-\[500px\]\:w-2\/5 {
+    width: 40%;
+  }
+}
+
 @media (min-width: 640px) {
+  .sm\:w-5\/6 {
+    width: 83.333333%;
+  }
+
   .sm\:flex-row {
     flex-direction: row;
   }
 
+  .sm\:rounded-e-\[120px\] {
+    border-start-end-radius: 120px;
+    border-end-end-radius: 120px;
+  }
+
+  .sm\:p-0 {
+    padding: 0px;
+  }
+
   .sm\:underline {
     text-decoration-line: underline;
+  }
+}
+
+@media (min-width: 700px) {
+  .min-\[700px\]\:w-1\/5 {
+    width: 20%;
+  }
+}
+
+@media (min-width: 760px) {
+  .min-\[760px\]\:w-5\/6 {
+    width: 83.333333%;
+  }
+
+  .min-\[760px\]\:flex-col {
+    flex-direction: column;
+  }
+
+  .min-\[760px\]\:rounded-e-\[120px\] {
+    border-start-end-radius: 120px;
+    border-end-end-radius: 120px;
+  }
+}
+
+@media (min-width: 765px) {
+  .min-\[765px\]\:w-5\/6 {
+    width: 83.333333%;
+  }
+
+  .min-\[765px\]\:rounded-e-\[120px\] {
+    border-start-end-radius: 120px;
+    border-end-end-radius: 120px;
+  }
+
+  .min-\[765px\]\:rounded-s-\[0\] {
+    border-start-start-radius: 0;
+    border-end-start-radius: 0;
+  }
+
+  .min-\[765px\]\:rounded-s-\[120px\] {
+    border-start-start-radius: 120px;
+    border-end-start-radius: 120px;
+  }
+
+  .min-\[765px\]\:rounded-e-\[0\] {
+    border-start-end-radius: 0;
+    border-end-end-radius: 0;
+  }
+}
+
+@media (min-width: 766px) {
+  .min-\[766px\]\:w-5\/6 {
+    width: 83.333333%;
+  }
+
+  .min-\[766px\]\:rounded-e-\[120px\] {
+    border-start-end-radius: 120px;
+    border-end-end-radius: 120px;
+  }
+}
+
+@media (min-width: 767px) {
+  .min-\[767px\]\:w-5\/6 {
+    width: 83.333333%;
+  }
+
+  .min-\[767px\]\:rounded-e-\[120px\] {
+    border-start-end-radius: 120px;
+    border-end-end-radius: 120px;
   }
 }
 
@@ -3752,6 +3927,10 @@ video {
     width: 50%;
   }
 
+  .md\:w-1\/5 {
+    width: 20%;
+  }
+
   .md\:w-\[25\%\] {
     width: 25%;
   }
@@ -3774,6 +3953,14 @@ video {
 
   .md\:w-\[90\%\] {
     width: 90%;
+  }
+
+  .md\:w-2\/4 {
+    width: 50%;
+  }
+
+  .md\:w-2\/6 {
+    width: 33.333333%;
   }
 
   .md\:flex-row {
@@ -3803,6 +3990,10 @@ video {
        object-fit: cover;
   }
 
+  .md\:p-0 {
+    padding: 0px;
+  }
+
   .md\:py-24 {
     padding-top: 6rem;
     padding-bottom: 6rem;
@@ -3814,6 +4005,10 @@ video {
 
   .md\:pr-0 {
     padding-right: 0px;
+  }
+
+  .md\:pt-24 {
+    padding-top: 6rem;
   }
 
   .md\:text-justify {
@@ -3836,6 +4031,35 @@ video {
   }
 }
 
+@media (min-width: 770px) {
+  .min-\[770px\]\:w-5\/6 {
+    width: 83.333333%;
+  }
+
+  .min-\[770px\]\:rounded-e-\[120px\] {
+    border-start-end-radius: 120px;
+    border-end-end-radius: 120px;
+  }
+}
+
+@media (min-width: 800px) {
+  .min-\[800px\]\:w-1\/5 {
+    width: 20%;
+  }
+}
+
+@media (min-width: 900px) {
+  .min-\[900px\]\:w-1\/5 {
+    width: 20%;
+  }
+}
+
+@media (min-width: 1000px) {
+  .min-\[1000px\]\:w-1\/5 {
+    width: 20%;
+  }
+}
+
 @media (min-width: 1024px) {
   .lg\:static {
     position: static;
@@ -3855,6 +4079,10 @@ video {
 
   .lg\:w-\[80\%\] {
     width: 80%;
+  }
+
+  .lg\:w-1\/5 {
+    width: 20%;
   }
 
   .lg\:justify-center {
