--- a/input.css
+++ b/input.css
@@ -126,16 +126,13 @@
 background-image: url("images/map.png");
 background-size: cover;
 background-repeat: no-repeat;
-/* background-color: #ff0099; */
-/* background:radial-gradient(#0057ff,#ff5500)  ;
-background-blend-mode: multiply; */
 
 }
 
 /* @media screen and (min-width: 768px){ */
     .background{
         background-color: transparent;
-        background-image: url(D:\tailwend\test\project\Website_contents\Backgronud-01.png); 
+        background-image: url('./images/Backgronud-01.png'); 
         /* background-position: */
         background-size: cover;
         /* background-size: 90% 90%; */
@@ -146,7 +143,7 @@ background-blend-mode: multiply; */
 
     .background_choose{
       background-color: transparent;
-      background-image: url(D:\tailwend\test\project\Choose-pana.png); 
+      background-image: url('./images/Choose-pana.png'); 
       background-position:left bottom;
       background-size: cover;
       background-size: 300px 300px;
