--- a/input.css
+++ b/input.css
@@ -9,6 +9,12 @@
 }
 
 
+
+
+:hover.button_fill{
+  background-color: linear-gradient(white,white), linear-gradient(to right,  #8f68ac, #3d7cbc, #5db847);
+}
+
 .custom-shadow {
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.08);
 }
@@ -66,14 +72,20 @@
   display: flex;
   align-items: center;
   
-  border: 5px solid;
-  border-image-slice: 1;
+  /* border: 2px solid; */
+  /* border-image-slice: 1; */
   /* border-width: 5px; */
   /* border: 10px solid #6A2C70; */
-  border-image-source: linear-gradient(to right,  #8f68ac, #3d7cbc, #5db847);
   /* background-image: linear-gradient(to right, #8f68ac, #3d7cbc, #5db847); */
   
-  border-radius: 30px;
+  border-radius: 10px;
+  /* border: double 0px transparent; */
+  background-image: linear-gradient(white,white), linear-gradient(to right,  #8f68ac, #3d7cbc, #5db847);
+  background-origin: border-box;
+  background-clip: content-box,border-box;
+  padding: 3px;
+  
+  /* border-radius: 30px; */
   justify-content: center;
   text-align: center;
   font-size: 24px;
