--- a/input.css
+++ b/input.css
@@ -153,6 +153,20 @@ background-repeat: no-repeat;
         /* object-fit: fill; */
     }
 
+    .background_mode{
+      background-color: transparent;
+      background-image: url('background/Bg.png'); 
+      /* background-position: */
+      background-size: cover;
+      /* background-size: 90% 90%; */
+      background-repeat: round;
+      /* opacity: 20%; */
+      z-index: -2;
+      /* object-fit: fill; */
+  }
+
+
+
     .background_choose{
       background-color: transparent;
       background-image: url('./images/Choose-pana.png'); 
